# robdos_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
cfg/: controllerOrientation.cfg  controllerPosition.cfg
config/: robdos_rqt.perspective  rqt_bags.perspective  rqt_multiplot.xml  rqt_smach.perspective  rqt_smach_control.perspective  run_px4_instructions.txt  rviz_config_bags.rviz  rviz_config_waypoints.rviz
docs/source/: index.rst  tutorials.rst
include/robdos_sim/: gazebo_sub_drive.h
launch/: robdos_px4_UAV.launch  robdos_sim.launch  robdos_sim_play_bags.launch  robdos_state_machine.launch  robdos_waypoints.launch
models/: Jacket_no_aero.dae  mount_blend.dae  robdos_model_base.dae  temporal_model  water_world.dae
models/iris/: iris.sdf
models/robdos_model/: model.config  model.sdf
models/robdos_model_v1/: model.sdf
msg/: StateCommand.msg  StateEvent.msg
scripts/pysdf/: __init__.py  conversions.py  gazebo2rviz.py  naming.py  parse.py
src/: camera_processing_example.py  marker_generator.py  robdos_control.cpp  state_machine_init.py  teleop_joy.cpp  teleop_joy.hpp  waypoint_controller.py  waypoint_interactive_publisher.py  waypoint_publisher.py
src/classes/: GazeboMapper.py  OrientationController.py  PositionController.py  TeleopController.py
src/gazebo_plugins/: robot_ros_utils.cpp  robot_sub_drive.cpp
src/old/: state_machine_init_ORIG.py  waypoint_controller.py_OLD
src/rqt_smach/: container_node.py  rqt_smach.py
src/test/: waypoint_publisher.cpp
src/xdot/: xdot_qt.py
world/: robdos_bag_replay.world  robdos_model.world  robdos_px4_uav.world  robdos_state_machine_control.world  robdos_test.world  robdos_underwater.world  underwater_gazebo_test.world
