<?xml version="1.0"?>
<package>
    <name>robdos_sim</name>
    <version>0.0.0</version>
    <description>The robdos_sim package</description>

    <maintainer email="francisc0garcia@hotmail.com">Francisco J. Garcia R.</maintainer>

    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>mavros_msgs</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>mavros_msgs</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- gazebo_ros_paths_plugin automatically adds these to
            GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
            the package.xml file. You can than use URIs of type model://my_package/stuff. -->
        <gazebo_ros
                gazebo_plugin_path="${prefix}/lib"
                gazebo_model_path="${prefix}/.."/>

        <rqt_gui plugin="${prefix}/plugin.xml"/>

    </export>
</package>